src/app/globals.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600|Inter:400,700,800');


/*https://coolors.co/f5f5f5-2c2c2c-d9515e-ec8843-ffbe27-a4b950-3fa272-38b8bc-637fbb*/

:root {
    --white: #f5f5f5;
    --black: #2c2c2c;
}

body {
    padding: 0 20px;
    background-color: var(--white);
}

/*Title*/
h1 {
    font-family: Poppins, serif;
    font-weight: 500;
    font-size: 96px;
    letter-spacing: 2.88px;
    line-height: normal;
    margin: 20px;
    color: var(--black);
}

/*Subtitles, menu*/
h2 {
    font-family: Poppins, serif;
    font-weight: 500;
    font-size: 28px;
    color: gray;
    display: inline-block;
    margin: 0 20px;
    letter-spacing: 1px;
}

h2:hover {
    color: var(--black);
    transition: 0.2s ease-in-out;
}

/*Section titles?*/
h3 {
    font-family: Inter, serif;
    font-weight: 400;
    font-size: 24px;
    margin: 8px;
    color: var(--black);
}

/*Buttons*/
h4 {
    font-family: Poppins, serif;
    font-weight: 500;
    font-size: 18px;
    margin: 0;
    color: var(--black);
}

/*Statistics Titles, Input labels*/
h5 {
    font-family: Inter, serif;
    font-weight: 400;
    font-size: 14px;
    margin: 8px;
    margin-bottom: 0px;
    margin-top: 24px;
    color: var(--black);
}

form > h5{
    text-align: left;
    width: 100%;
}

/*Numbers, Amounts*/
p {
    font-family: 'Podkova Medium', serif;
    font-size: 18px;
    margin: 12px;
    color: var(--black);
}

/*UserTag text*/
.usertag {
    background-color: gray;
    border: 0px;
    border-radius: 50px;
    display: inline-block;
    margin: 4px;
    padding: 4px 10px;
    font-family: "Poppins", serif;
    color: white;
    font-weight: 500;
    font-size: 14px;
    float: inherit;
    box-sizing: content-box;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.unselectable{
    user-select: none;
}

.outlined {
    padding: 2px 8px;
    border: 2px solid black;
}



table {
    width: 100%;
    border-spacing: 0;
    margin-right: 20px;
    table-layout: fixed;
}


th {
    border: 3px var(--black) solid;
    border-width: 0 0 3px 0;
}

td {
    border: 1px var(--black) solid;
    border-width: 0 0 1px 0;
}

th > h5 {
    font-weight: bold;
}

.notable {
    border: none;
}



/*Buttons*/
.sbtn, .sbtn_with_h4 {
    font-family: 'Poppins', serif;
    font-weight: 500;
    font-size: 18px;
    letter-spacing: 1px;
    font-weight: 500;
    border: 2px solid var(--black);
    border-radius: 8px;
    width: fit-content;
    margin: 20px;
    padding: 8px 20px;
    display: inline-block;
    text-underline: none;
    color: var(--black);
    outline: none;
    text-decoration: none;
}

.sbtn:hover {
    box-shadow: 4px 4px 4px lightgray;
}

.sbtn_with_h4:hover {
    box-shadow: 4px 4px 4px lightgray;
}




/*Links*/
button {
    background-color: transparent;
    border: none;
    cursor: pointer;
    outline: none;
    color: var(--black);
    text-decoration: underline;
}


/*Images (arrow)*/
img {
    margin: 0 5px;
    display: inline-block;
}



/*Input Fields*/
input, .input {
    font-family: 'Poppins', serif;
    font-weight: 500;
    font-size: 18px;
    border: solid gray;
    border-width: 0 0 2px 0;
    background: none;
    text-align: center;
    color: black;
    width: 100%;
    margin-bottom: 12px;
    outline: none;
}

input:hover {
    border-color: black;
    outline: none;
    /*box-shadow: 0 2px 4px lightgray;*/
}

input:focus {
    border-width: 0 0 3px 0;
    /*box-shadow: 0 4px 4px lightgray;*/
}

.searchinput{
    font-family : Inter, serif;
    font-weight : 400;
    font-size: 14px;
    float: right;
}




textarea {
    border: solid gray 2px;
    background: none;
    text-align: left;
    color: black;
    font-family: 'Poppins', serif;
    font-size: 18px;
    margin: 10px;
    width: 40rem;
    height: 15rem;
    outline: none;
}


/*Radio Buttons*/
.radio {
    width: auto;
    accent-color:var(--black);
}

.radio:focus {
    box-shadow: none;
}




/*Checkbox*/
.checkbox {
    width: auto;
    accent-color: black;
}

.checkbox:hover {
    box-shadow: none;
}

.checkbox:focus {
    box-shadow: none;
}

.floating-top {
    position: absolute;
    top: 20px;
    right: 20px;
    display: flex;
    flex-direction: row;
}

@media (max-width: 1270px) {
    .card {
        display: none;
    }
}

@keyframes fill {
    0% {
        width: 0;
    }
    100% {
        width: calc(100% + 14px);
    }
}

@keyframes border {
    0% {
        box-shadow: 0 0 4px #626262;
        transform: translate(0, 0);
    }
    50% {
        box-shadow: 8px 8px 4px #626262;
        transform: translate(-4px, -8px);
    }
    100% {
        box-shadow: 0px 0px 4px #626262;
        transform: translate(0, 0);
    }
}

@keyframes border-dark {
    0% {
        box-shadow: 0 0 4px #383838;
        transform: translate(0, 0);
    }
    50% {
        box-shadow: 8px 8px 4px #383838;
        transform: translate(-4px, -8px);
    }
    100% {
        box-shadow: 0px 0px 4px #383838;
        transform: translate(0, 0);
    }
}

@keyframes appear {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}


.tagerror {
    color: red;
}





/*Generic*/
.w3 {
    width: 3rem;
}

.w5 {
    width: 5rem;
}

.w7 {
    width: 7rem;
}

.w50 {
    width: 50%;
}

.h3 {
    height: 3rem;
}

.h5 {
    height: 5rem;
}

.h10 {
    height: 10rem;
}

.mw30 {
    max-width: 30%;
}

.right {
    text-align: right;
    align-content: end;
    align-items: end;
    align-self: end;
}

.left {
    text-align: left;
}

.middle {
    text-align: center;
    align-content: center;
}

.bold {
    font-weight: bold;
}

.italic {
    font-style: italic;
    color: darkslategray;
}

.min-width {
    width: fit-content;
    padding: 0;
}

.scrollY{
    overflow-y: scroll;
    overflow-x: hidden;
    width: 100%;
    height: 100%;
}

